[package]
name = "xpallet-mining-staking"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
log = { workspace = true, default-features = false }

# Substrate primitives
sp-arithmetic =  { workspace = true, default-features = false }
sp-core =  { workspace = true, default-features = false }
sp-runtime =  { workspace = true, default-features = false }
sp-staking =  { workspace = true, default-features = false }
sp-std =  { workspace = true, default-features = false }

# Substrate pallets
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../primitives", default-features = false }
xp-mining-common = { path  = "../../primitives/mining/common", default-features = false }
xp-mining-staking = { path  = "../../primitives/mining/staking", default-features = false }
xp-rpc = { path = "../../primitives/rpc", optional = true }
xp-runtime = { path = "../../primitives/runtime", default-features = false }

# BEVM pallets
xpallet-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
frame-benchmarking = { workspace = true }
pallet-timestamp = { workspace = true }
xp-protocol = { path = "../../primitives/protocol" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    "log/std",
    # Substate primitives
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    # Substrate pallets
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-session/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-mining-common/std",
    "xp-mining-staking/std",
    "xp-rpc",
    "xp-runtime/std",
    # BEVM pallets
    "xpallet-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
