[package]
name = "xpallet-mining-staking"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["derive", "alloc"] }
micromath = { version="2.1.0", default-features = false }

# Substrate primitives
sp-arithmetic = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-staking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }


# Substrate pallets
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
pallet-balances = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
pallet-session = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }


# BEVM primitives
bevm-primitives = { path = "../../primitives", default-features = false }
xp-mining-common = { path  = "../../primitives/mining/common", default-features = false }
xp-mining-staking = { path  = "../../primitives/mining/staking", default-features = false }
xp-rpc = { path = "../../primitives/rpc", optional = true }
xp-runtime = { path = "../../primitives/runtime", default-features = false }

# BEVM pallets
xpallet-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-io = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
pallet-timestamp = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
xp-protocol = { path = "../../primitives/protocol" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",
    "log/std",
    # Substate primitives
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    # Substrate pallets
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-session/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-mining-common/std",
    "xp-mining-staking/std",
    "xp-rpc",
    "xp-runtime/std",
    # BEVM pallets
    "xpallet-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
