[package]
name = "xpallet-support"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
hex = { workspace = true, default-features = false }

# Substrate primitives
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "hex/std",
    # Substrate primitives
    "sp-std/std",
]
