[package]
name = "xpallet-support"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
hex = { version = "0.4.3", features = ["alloc"], default-features = false }

# Substrate primitives
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

[features]
default = ["std"]
std = [
    "hex/std",
    # Substrate primitives
    "sp-std/std",
]
