[package]
name = "xpallet-system"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Substrate primitives
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# Substrate pallets
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
xp-protocol = { path = "../../primitives/protocol", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    # Substrate primitives
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-support/std",
    "frame-system/std",
    # BEVM primitives
    "xp-protocol/std",
]
