[package]
name = "xp-gateway-bitcoin"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
hex = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-gateway-common = { path = "../../gateway/common", default-features = false }

# light-bitcoin
light-bitcoin = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    "hex/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-gateway-common/std",
    # light-bitcoin
    "light-bitcoin/std",
]
ss58check = ["xp-gateway-common/ss58check"]
