[package]
name = "xp-gateway-bitcoin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", features = ["derive"], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
log = { version = "0.4.17", default-features = false}
serde = { version = "1.0.192", features = ["derive", "alloc"], optional = true }

# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-gateway-common = { path = "../../gateway/common", default-features = false }

# light-bitcoin
light-bitcoin = { git = "https://github.com/btclayer2/light-bitcoin", branch = "develop-2022", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    "hex/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-gateway-common/std",
    # light-bitcoin
    "light-bitcoin/std",
]
ss58check = ["xp-gateway-common/ss58check"]
