[package]
name = "xp-gateway-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
bs58 = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
hex = { workspace = true }
log = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }

# BEVM primitives
xp-io = { path = "../../io", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "hex/std",
    "bs58/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    # BEVM primitives
    "xp-io/std",
]
ss58check = ["xp-io"]
