[package]
name = "xp-gateway-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
bs58 = { workspace = true, default-features = false }

# Substrate primitives
sp-core = { workspace = true, default-features = false }

# BEVM primitives
xp-io = { path = "../../io", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "hex/std",
    "bs58/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    # BEVM primitives
    "xp-io/std",
]
ss58check = ["xp-io"]
