[package]
name = "xp-gateway-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", features = ["derive"], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
bs58 = { version = "0.3", features = ["alloc"], default-features = false }
log = { version = "0.4.17", default-features = false}


# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
xp-io = { path = "../../io", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "hex/std",
    "bs58/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    # BEVM primitives
    "xp-io/std",
]
ss58check = ["xp-io"]
