[package]
name = "xp-mining-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
# Substrate primitives
sp-arithmetic = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate primitives
    "sp-arithmetic/std",
    "sp-runtime/std",
    # BEVM primitives
    "bevm-primitives/std",
]
