[package]
name = "xp-mining-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
# Substrate primitives
sp-arithmetic = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate primitives
    "sp-arithmetic/std",
    "sp-runtime/std",
    # BEVM primitives
    "bevm-primitives/std",
]
