[package]
name = "xp-mining-staking"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
# Substrate primitives
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-mining-common = { path = "../common", default-features = false }

[features]
default = ["std"]
std = [
    # Substrate primitives
    "sp-runtime/std",
    "sp-std/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-mining-common/std",
]
