[package]
name = "xpallet-btc-ledger-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", features = ["derive", "max-encoded-len"] }

jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

# Substrate primitives
sp-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-blockchain = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# rpc primitives
xp-rpc = { path = "../../../primitives/rpc" }

# pallets api
xpallet-btc-ledger-runtime-api = { path = "./runtime-api" }
