[package]
name = "xpallet-gateway-bitcoin"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
bs58 = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

# Substrate primitives
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Substrate pallets
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
#pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc", default-features = false, features = ["chainx-adaptor"] }

# Asset bridge
#xpallet-assets-bridge = { path = "../../assets-bridge", default-features = false }


# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-gateway-bitcoin = { path = "../../../primitives/gateway/bitcoin", default-features = false }
xp-gateway-common = { path = "../../../primitives/gateway/common", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }

# BEVM pallets
xpallet-btc-ledger = { path = "../../btc-ledger", default-features = false }
xpallet-gateway-common = { path = "../common", default-features = false }
xpallet-gateway-records = { path = "../records", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

# light-bitcoin
light-bitcoin = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
sp-keyring = { workspace = true }
frame-benchmarking = { workspace = true }
pallet-balances = { workspace = true }
pallet-elections-phragmen = { workspace = true }


[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "hex/std",
    "serde",
    "bs58/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
#    "pallet-evm/std",
    # Asset bridge
#    "xpallet-assets-bridge/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-gateway-bitcoin/std",
    "xp-gateway-common/std",
    "xp-protocol/std",
    "xp-assets-registrar/std",
    # BEVM pallets
    "xpallet-btc-ledger/std",
    "xpallet-gateway-common/std",
    "xpallet-gateway-records/std",
    "xpallet-support/std",
    # light-bitcoin
    "light-bitcoin/std",
]
runtime-benchmarks = ["frame-benchmarking"]
ss58check = ["xp-gateway-common/ss58check"]
try-runtime = ["frame-support/try-runtime"]
