[package]
name = "xpallet-gateway-bitcoin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.192", features = ["derive", "alloc"], optional = true }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
bs58 = { version = "0.3", features = ["alloc"], default-features = false }
log = { version = "0.4.17", default-features = false}

# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-io = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
pallet-timestamp = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

pallet-evm = { git = "https://github.com/btclayer2/frontier", branch = "polkadot-sdk-v1.3.0", default-features = false }

# Asset bridge
xpallet-assets-bridge = { path = "../../assets-bridge", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-gateway-bitcoin = { path = "../../../primitives/gateway/bitcoin", default-features = false }
xp-gateway-common = { path = "../../../primitives/gateway/common", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }

# BEVM pallets
xpallet-btc-ledger = { path = "../../btc-ledger", default-features = false }
xpallet-gateway-common = { path = "../common", default-features = false }
xpallet-gateway-records = { path = "../records", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

# light-bitcoin
light-bitcoin = { git = "https://github.com/btclayer2/light-bitcoin", branch = "develop-2022", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4.1"
serde_json = "1.0.108"
lazy_static = "1.4"
sp-keyring = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
pallet-balances = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
pallet-elections-phragmen = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "hex/std",
    "serde",
    "bs58/std",
    "log/std",
    # Substrate primitives
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-evm/std",
    # Asset bridge
    "xpallet-assets-bridge/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-gateway-bitcoin/std",
    "xp-gateway-common/std",
    "xp-protocol/std",
    "xp-assets-registrar/std",
    # BEVM pallets
    "xpallet-btc-ledger/std",
    "xpallet-gateway-common/std",
    "xpallet-gateway-records/std",
    "xpallet-support/std",
    # light-bitcoin
    "light-bitcoin/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
ss58check = ["xp-gateway-common/ss58check"]
try-runtime = ["frame-support/try-runtime"]
