[package]
name = "xpallet-gateway-common"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
log = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Substrate pallets
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-elections-phragmen = { workspace = true }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }
xp-gateway-bitcoin = { path = "../../../primitives/gateway/bitcoin", default-features = false }
xp-gateway-common = { path = "../../../primitives/gateway/common", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-rpc = { path = "../../../primitives/rpc", optional = true }
xp-runtime = { path = "../../../primitives/runtime", default-features = false }

# BEVM pallets
xpallet-gateway-records = { path = "../records", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

# light-bitcoin
light-bitcoin = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
serde_json = { workspace = true }
sp-keyring = { workspace = true }
sp-io = { workspace = true }
frame-benchmarking = { workspace = true }
pallet-balances = { workspace = true }
#pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc", default-features = false, features = ["chainx-adaptor"] }
pallet-timestamp = { workspace = true }
#xpallet-assets-bridge = { path = "../../assets-bridge", default-features = false }
xpallet-gateway-bitcoin = { path = "../bitcoin" }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "hex/std",
  "serde",
  "scale-info/std",
  "log/std",
  # Substrate primitives
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  # Substrate pallets
  "frame-support/std",
  "frame-system/std",
  "pallet-elections-phragmen/std",
  # BEVM primitives
  "bevm-primitives/std",
  "xp-assets-registrar/std",
  "xp-gateway-bitcoin/std",
  "xp-gateway-common/std",
  "xp-protocol/std",
  "xp-rpc",
  "xp-runtime/std",
  # BEVM pallets
  "xpallet-gateway-records/std",
  "xpallet-support/std",
  # light-bitcoin
  "light-bitcoin/std",
]
runtime-benchmarks = ["hex", "frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
