[package]
name = "xpallet-gateway-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.192", default-features = false, features = ["derive", "alloc"] }
log = { version = "0.4.17", default-features = false}
hex = { version = "0.4.3", features = ["alloc"], default-features = false, optional = true }

# Substrate primitives
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

pallet-elections-phragmen = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }
xp-gateway-bitcoin = { path = "../../../primitives/gateway/bitcoin", default-features = false }
xp-gateway-common = { path = "../../../primitives/gateway/common", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-rpc = { path = "../../../primitives/rpc", optional = true }
xp-runtime = { path = "../../../primitives/runtime", default-features = false }

# BEVM pallets
xpallet-gateway-records = { path = "../records", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

# light-bitcoin
light-bitcoin = { git = "https://github.com/btclayer2/light-bitcoin", branch = "develop-2022", default-features = false }

[dev-dependencies]
serde_json = "1.0.108"
lazy_static = "1.4"
sp-keyring = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-io = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
pallet-balances = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
#pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18-btc", default-features = false, features = ["chainx-adaptor"] }
pallet-timestamp = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
#xpallet-assets-bridge = { path = "../../assets-bridge", default-features = false }
xpallet-gateway-bitcoin = { path = "../bitcoin" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "serde/std",
  "hex/std",
  "log/std",
  # Substrate primitives
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  # Substrate pallets
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-elections-phragmen/std",
  # BEVM primitives
  "bevm-primitives/std",
  "xp-assets-registrar/std",
  "xp-gateway-bitcoin/std",
  "xp-gateway-common/std",
  "xp-protocol/std",
  "xp-rpc",
  "xp-runtime/std",
  # BEVM pallets
  "xpallet-gateway-records/std",
  "xpallet-support/std",
  # light-bitcoin
  "light-bitcoin/std",
]
runtime-benchmarks = ["hex", "frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
